# sladebrewing

./: .gitignore  ADMIN_PANEL.md  QUICK_START.md  README.md  TODO.md  UNTAPPD_SETUP.md  beers.enriched.example.json  beers.html  beers.json  elements.html  enrich_beers.py  index.html  news.html  news.json  pyproject.toml  render.yaml  requirements.txt  server.py
assets/css/: main.css  noscript.css  style.css
assets/js/: script.js
