[tool.poetry]
name = "sladebrewing"
version = "0.1.0"
description = "Slade Brewing Website"
authors = ["Slade"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31"
beautifulsoup4 = "^4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
